# autoclicker

./: Cargo.toml  LICENSE  README.md
src/: main.rs  mouse.rs  util.rs
